fix endpoints bug (/user to /users)
