# doc/api.yaml
@@ -59,7 +59,8 @@ paths:
     get:
       tags: ["stream"]
       summary: Authenticated user's feed
-      description: Show the authenticated user's feed in reverse chronological order
+      description: |-
+        Show the authenticated user's feed in reverse chronological order
       operationId: getMyStream
       responses:
         '200':
@@ -67,6 +68,8 @@ paths:
           content:
             application/json:
                 schema:
+                  description: |-
+                    Array of photos posted by the people that the user follows
                   type: array
                   items:
                     $ref: '#/components/schemas/Photo'
@@ -77,7 +80,8 @@ paths:
     get:
       tags: ["users"]
       summary: Search users
-      description: Search for users that match the query
+      description: |-
+        Search for users that match the query
       operationId: searchUsers
       parameters:
         - name: q
@@ -101,7 +105,7 @@ paths:
       security:
       - bearerAuth: []
     
-  /user/{username}:
+  /users/{username}:
     get:
       tags: ["users"]
       summary: User's profile
@@ -125,7 +129,7 @@ paths:
           description: User not found
       security:
       - bearerAuth: []
-  /user/{username}/username:
+  /users/{username}/username:
     put:
       tags: ["users"]
       summary: Update username
@@ -394,13 +398,13 @@ paths:
           description: Photo not found
           
   /photo/{photoId}/comments:
+    parameters:
+      - $ref: "#/components/parameters/photoId"
     get:
       tags: ["comments"]
       summary: List all comments in photo with the given Id
       description: List all the comments in a photo
       operationId: listComments
-      parameters:
-        - $ref: "#/components/parameters/photoId"
       responses:
         '200':
           description: Sucessfully list comments
@@ -420,8 +424,6 @@ paths:
       summary: Add a comment to a photo
       description: Add a comment to a photo given the id of the photo
       operationId: commentPhoto
-      parameters:
-        - $ref: "#/components/parameters/photoId"
       requestBody:
         description: Add a comment to an existing photo
         content:
@@ -515,6 +517,7 @@ paths:
       security:
       - bearerAuth: [] 
     delete:
+      tags: ["likes"]
       summary: unlike the photo with the id
       description: remove the aunthenticated user's like from the photo with the id
       operationId: unlikePhoto
@@ -529,6 +532,7 @@ paths:
           description: Photo not found
       security:
       - bearerAuth: [] 
+
 
 components:
   schemas:
